kubernetes-security/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service
  namespace: homework
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
